add the simulated events

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<script src="js/require.js" type="text/javascript" charset="utf-8" data-main="js/main"></script>
 	</head>
 	<body>
+		<input type="button" name="next" id="next" value="下一张" />
+		<input type="button" name="prev" id="prev" value="上一张" />
 	</body>
 	
 </html>
