--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
 		 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="css/rollchart.css" />
-		<script src="js/require.js" type="text/javascript" charset="utf-8" data-main="js/main"></script>
+		<script src="baseJS/require.js" type="text/javascript" charset="utf-8" data-main="rollchartJs/main"></script>
 	</head>
 	<body>
 		<!--<input type="button" name="next" id="next" value="下一张" />
