--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		<script src="baseJS/require.js" type="text/javascript" charset="utf-8" data-main="rollchartJs/main"></script>
 	</head>
 	<body>
-		<!--<input type="button" name="next" id="next" value="下一张" />
-		<input type="button" name="prev" id="prev" value="上一张" />-->
+		<input type="button" name="next" id="next" value="下一张" />
+		<input type="button" name="prev" id="prev" value="上一张" />
 	</body>
-	
 </html>
